Перевод темплейтов и примера Hello world (#1)
* переведен hello-world

* изменен текст-лейбл "Далее"

* обновлены темплейты и добавлен автор

--- a/public/index.html
+++ b/public/index.html
@@ -2,33 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Go by Example</title>
+    <title>Go на примерах</title>
     <link rel=stylesheet href="site.css">
   </head>
   <body>
     <div id="intro">
-      <h2><a href="./">Go by Example</a></h2>
+      <h2><a href="./">Go на примерах</a></h2>
       <p>
-        <a href="https://go.dev">Go</a> is an
-        open source programming language designed for
-        building scalable, secure and reliable software.
-        Please read the
-        <a href="https://go.dev/doc/tutorial/getting-started">official documentation</a>
-        to learn more.
+        <a href="https://go.dev">Go</a> — это язык программирования с открытым
+        исходным кодом, разработанный для создания масштабируемого, безопасного
+        и надёжного программного обеспечения. Подробнее смотри в
+        <a href="https://go.dev/doc/tutorial/getting-started">официальной документации</a>.
       </p>
 
       <p>
-        <em>Go by Example</em> is a hands-on introduction
-        to Go using annotated example programs. Check out
-        the <a href="hello-world">first example</a> or
-        browse the full list below.
+        <em>Go на примерах</em> — это практическое введение в Go на основе
+        примеров с комментариями. Начни с
+        <a href="hello-world">первого примера</a> или посмотри весь список ниже.
       </p>
 
       <p>
-        Unless stated otherwise, examples here assume the
-        <a href="https://go.dev/doc/devel/release">latest major release Go</a>
-        and may use new language features. Try to upgrade to the latest
-        version if something isn't working.
+        Примеры здесь рассчитаны на
+        <a href="https://go.dev/doc/devel/release">актуальный мажорный релиз Go</a> 
+        (если не указано иное) и могут использовать новые возможности языка. 
+        Если что-то не работает, попробуй обновиться до последней версии.
       </p>
 
       <ul>
@@ -206,7 +203,7 @@
       </ul>
 
     <p class="footer">
-      by <a href="https://markmcgranaghan.com">Mark McGranaghan</a> and <a href="https://eli.thegreenplace.net">Eli Bendersky</a> | <a href="https://github.com/mmcgrana/gobyexample">source</a> | <a href="https://github.com/mmcgrana/gobyexample#license">license</a>
+      by <a href="https://markmcgranaghan.com">Mark McGranaghan</a>, <a href="https://eli.thegreenplace.net">Eli Bendersky</a> and <a href="https://github.com/kuduzow">kuduzow</a>  | <a href="https://github.com/intocode/gobyexample-ru">source</a> | <a href="https://github.com/intocode/gobyexample-ru">license</a>
     </p>
 
     </div>
