переведён материал по замыканиям и рекурсии

--- a/public/404.html
+++ b/public/404.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Go на примерах: Not Found</title>
+    <title>Go на примерах: Не найдено</title>
     <link rel=stylesheet href="site.css">
   </head>
   <body>
     <div id="intro">
       <h2><a href="./">Go на примерах</a></h2>
-      <p>Sorry, we couldn't find that! Check out the <a href="./">home page</a>?</p>
+      <p>Простите, мы не в силах это найти! Перейти на <a href="./">главную</a>?</p>
 
     <p class="footer">
-      by <a href="https://markmcgranaghan.com">Mark McGranaghan</a>, <a href="https://eli.thegreenplace.net">Eli Bendersky</a> and <a href="https://github.com/kuduzow">kuduzow</a>  | <a href="https://github.com/intocode/gobyexample-ru">source</a> | <a href="https://github.com/intocode/gobyexample-ru">license</a>
+      by <a href="https://markmcgranaghan.com">Mark McGranaghan</a>, <a href="https://eli.thegreenplace.net">Eli Bendersky</a> и <a href="https://github.com/kuduzow">kuduzow</a>  | <a href="https://github.com/intocode/gobyexample-ru">источник</a> | <a href="https://github.com/intocode/gobyexample-ru">лицензия</a>
     </p>
 
     </div>
