добавлен хэш для каждой сборки

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Go на примерах</title>
-    <link rel=stylesheet href="site.css">
+    <link rel=stylesheet href="site.css?v=d3162d31">
   </head>
   <body>
     <div id="intro">
@@ -23,8 +23,8 @@
 
       <p>
         Примеры здесь рассчитаны на
-        <a href="https://go.dev/doc/devel/release">актуальный мажорный релиз Go</a> 
-        (если не указано иное) и могут использовать новые возможности языка. 
+        <a href="https://go.dev/doc/devel/release">актуальный мажорный релиз Go</a>
+        (если не указано иное) и могут использовать новые возможности языка.
         Если что-то не работает, попробуй обновиться до последней версии.
       </p>
 
